# sfml-space-invaders

./: CMakeLists.txt
src/: main.cpp
src/includes/: space-craft.h  weapon-fire.h
